--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,17 @@
 .header {
     background-image: url(/img/main-photo.png);
-    background-repeat: no-repeat;
-    
+    background-size: cover;
+    background-position: center;
+    min-height: 500px;
+
 }
+
 h1 {
     color: beige;
+    text-align: center;
 
+}
+.header .header__paragraph {
+    color: beige;
+    text-align: center;
 }
